force-app/main/default/objects/Presupuesto_base__c/Presupuesto_base__c.object-meta.xml
<CustomObject>
    <label>Presupuesto base</label>
    <nameField>
        <label>Nombre de Presupuesto base</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Presupuestos base</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>