force-app/main/default/objects/Presupuesto_base__c/fields/Cotizacion_dolar__c.field-meta.xml
<CustomField>
    <fullName>Cotizacion_dolar__c</fullName>
    <label>Cotizacion dolar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>