force-app/main/default/objects/Presupuesto_base__c/fields/Descricion__c.field-meta.xml
<CustomField>
    <fullName>Descricion__c</fullName>
    <label>Descrición</label>
    <type>TextArea</type>
</CustomField>