force-app/main/default/objects/Presupuesto_base__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ingresado</fullName>
                <default>true</default>
                <label>Ingresado</label>
            </value>
            <value>
                <fullName>Para aprobar</fullName>
            </value>
            <value>
                <fullName>Aprobado</fullName>
            </value>
            <value>
                <fullName>Rechazado</fullName>
            </value>
            <value>
                <fullName>Renegociar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>