force-app/main/default/objects/Presupuesto_base__c/fields/Fecha__c.field-meta.xml
<CustomField>
    <fullName>Fecha__c</fullName>
    <label>Fecha</label>
    <type>Date</type>
</CustomField>