force-app/main/default/objects/Presupuesto_base__c/fields/Moneda__c.field-meta.xml
<CustomField>
    <fullName>Moneda__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Moneda</label>
    <referenceTo>Moneda__c</referenceTo>
    <relationshipLabel>Presupuestos base</relationshipLabel>
    <relationshipName>Presupuestos_base</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>