force-app/main/default/objects/Presupuesto_base__c/fields/Proveedor__c.field-meta.xml
<CustomField>
    <fullName>Proveedor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Proveedor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Proveedor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Presupuestos base</relationshipLabel>
    <relationshipName>Presupuestos_base</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>