force-app/main/default/objects/Presupuesto_base__c/fields/Responsable_carga__c.field-meta.xml
<CustomField>
    <fullName>Responsable_carga__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Responsable carga</label>
    <referenceTo>Responsable__c</referenceTo>
    <relationshipLabel>Presupuestos base</relationshipLabel>
    <relationshipName>Presupuestos_base</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>