force-app/main/default/objects/Presupuesto_base__c/fields/Sociedad__c.field-meta.xml
<CustomField>
    <fullName>Sociedad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sociedad</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Sociedad desarrolladora</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Presupuestos base (Sociedad)</relationshipLabel>
    <relationshipName>Presupuestos_base1</relationshipName>
    <type>Lookup</type>
</CustomField>