force-app/main/default/objects/Presupuesto_base__c/fields/Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Subtotal__c</fullName>
    <label>Subtotal</label>
    <summarizedField>Presupuesto_detalle__c.Subtotal__c</summarizedField>
    <summaryForeignKey>Presupuesto_detalle__c.Presupuesto_base__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>