force-app/main/default/objects/Presupuesto_base__c/fields/Valor_en_pesos__c.field-meta.xml
<CustomField>
    <fullName>Valor_en_pesos__c</fullName>
    <formula>if( Moneda__r.Name = &#39;Dolares&#39; , Monto__c * Moneda__r.Ultima_cotizacion__c, Monto__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor en pesos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>