force-app/main/default/objects/Presupuesto_base__c/fields/Valor_impuestos__c.field-meta.xml
<CustomField>
    <fullName>Valor_impuestos__c</fullName>
    <label>Valor impuestos</label>
    <summarizedField>Presupuesto_detalle__c.Valor_impuestos__c</summarizedField>
    <summaryForeignKey>Presupuesto_detalle__c.Presupuesto_base__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>