force-app/main/default/objects/Presupuesto_base__c/fields/Valor_total__c.field-meta.xml
<CustomField>
    <fullName>Valor_total__c</fullName>
    <label>Valor total</label>
    <summarizedField>Presupuesto_detalle__c.Valor_total__c</summarizedField>
    <summaryForeignKey>Presupuesto_detalle__c.Presupuesto_base__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>